app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page

.title_box {
  padding: 10px;
  margin: 50px 10px 10px;
}

.h1_titlebox h1 {
  font-size: 4rem;
  z-index: 5;
  margin-bottom: 6rem;
  background-color: lightgrey;
  background-image: linear-gradient(to top, #abdcec 0%, #d4e3e7 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;

}

.h1_titlebox2{
  z-index: 5;
}

.h1_titlebox2 h1 {
  font-size: 4rem;
  z-index: 5;
  margin-bottom: 6rem;
  background-color: lightgrey;
  background-image: linear-gradient(to top, #abdcec 0%, #d4e3e7 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;

}

.piccie {
z-index: 5;
position: relative;
}

.p_titlebox {
  margin-top: 1rem;
  font-size: 2rem;
  font-weight:400;
  color: lightgrey;
}

.simple_text {
  margin: 80px 10px 10px;
}

.carousel_Relative_container{
  position:relative
}

  .absolute-text{
    position: absolute;
    top: 16px;
    left: 16px;
  }

.img_carousel {
  height: 600px;
  object-fit: cover;
}

.homepage-row {
  margin: 0 !important;
}

.home-title h2 {
  margin: 33px 0px !important;
  background-color: lightblue;
  background-image: linear-gradient(to right, #c9e7f1 0%, #c3e5f1 21%, #7ab8ca 52%, #2a86a1 78%,#045268 100% );
  background-size: 100%;
  font-size: 2.5rem;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.main__img--container {
  text-align: center;
  margin-top: -100px;
}

.main__img--container2 {
  text-align: center;
  margin-top: -180px;
  z-index: 1;
  position: relative;
}

#main__img {
  height: 60%;
  width: 60%;
}

#main__img2 {
  height: 80%;
  width: 80%;
  z-index: 1;
}


.home-btn {
  font-size: 1rem;
  background-image: linear-gradient(to top, #45b6df 0%, #d4e3e7 100% );
  padding:14px 32px;
  border: none;
  color: #fff;
  margin-top: 2rem;
  cursor: pointer;
  position:relative;
  transition: all 0.35s;
  outline: none;
  display: inline;
  z-index: 2;
  text-decoration: none;
}


.home-btn:hover {
color: #fff;
z-index: 2;
text-decoration: none;
}


.home-btn:hover::after{
  width: 100%;
  text-decoration: none;
}

.home_text_container {
  display: flex;
  flex-direction: column;
  align-items:center;
  height: 100vh;
}

